# DrCacheDim

./: .gitignore  1-  CMakeLists.txt  README.md  TODO.md  collect_traces.pl  log.txt  main.pl  mymemtrace.c  optim.jl  process_memrefs.c  setup_specint.sh  show_sols.pl  stats.py  update_sims.pl
analysis/: calc.lua  calc.pl  trace-ana.py
aux/: Aux.pm  BBound.pm  DrCacheDim.pm  DrCachesim.pm  Optim.pm  RefGen.pm  SpecInt.pm  cachesim_sample_output.txt  cachetest.c  calib.jl  matmul.c  optim.jl  plot_fetchlat.gp  random-chase  refgen.c  setup_specint.sh  x-compile-aarch64.cfg
aux/cache-db/: bla  cachedb.txt  grab.sh  links.txt  names.txt  output.txt  parse.pl
aux/graveyard/: CMakeLists.txt  burst.c
aux/matmul/: main.c  matrix.c  matrix.h
cache-db/: parse.pl  parse.sh
cache-db/sites/: 01y2lp  08a7ls  0dh1vj  0g9qey  0kudjq  0vzqn7  0xhfcb  0ztqmx  12bsmk  13r9ni  17zc31  196ng6  1em2iq  1mv3dq  1qbzq7  1rfvfq  1te3ej  1y9vy0  20jy0w  2kkmwl  34kukq  387v1q  3bbtga  3e5sxd  3s89v6  48z8lh  49pays  4mtevb  505unn  59aeqm  5bu4f9  5f18tn  5lvxnt  5ufyql  66pzfc  6a28v5  6fd2ei  6p5pcz  6px5xa  6qnaud  (+162 more)
config/: cachesim_single.dr  linux-amd64.cfg  random-chase.out  random-chase2.out
experiments/: benchmark.pl  brute_force.pl  charact.jl  characterisation.pl  cost_shift.pl  matmul.jl  matmul.pl  max_cost.jl  max_cost.pl  max_mat.jl  max_mat.pl  metrics.pl  out.txt  show_sols.pl  test.pl  variance.pl  verify.pl
experiments/aliasing/: aliasing.lua  check.pl  plot.gp
results/: imagick_r-brutef-8-25-22-2-19.yml
results/CRC32/: CRC32-brutef-7-28-1-24-18.yml  CRC32-char-7-28-1-24-18.yml  CRC32-char-7-29-21-57-38-c100.yml  CRC32-max_cost-1115789-7-29-21-57-38-c100.yml  CRC32-max_cost-3641180-7-29-11-2-13.yml  CRC32-max_cost-3641180-7-29-13-52-5.yml  CRC32-max_cost-3641180.16-7-28-1-24-18.yml  CRC32-max_mat-239192685.29455-7-28-1-24-18.yml  CRC32-max_mat-240583570-7-29-13-52-5.yml  CRC32-max_mat-240583640-7-29-21-57-38-c100.yml  CRC32-max_mat-240583754-7-29-11-2-13.yml  CRC32-variance.yml
results/FFT/: FFT-brutef-7-28-1-24-18.yml  FFT-char-7-28-1-24-18.yml  FFT-char-7-29-21-57-38-c100.yml  FFT-max_cost-1115789-7-29-21-57-38-c100.yml  FFT-max_cost-3641180-7-29-11-2-13.yml  FFT-max_cost-3641180-7-29-13-52-5.yml  FFT-max_cost-3641180.16-7-28-1-24-18.yml  FFT-max_mat-400597204.47853-7-28-1-24-18.yml  FFT-max_mat-402003992-7-29-11-2-13.yml  FFT-max_mat-402037062-7-29-13-52-5.yml  (+2 more)
tracer/: mem_ref.h  process_memrefs.c
vis/: 2dplot.py  cscale_plot.py  pchase.gp  pcoord.py  plotit-noscale.sh  plotit.sh  plotit2.sh  poly.jl
(+277 files in other folders)
